[gd_scene load_steps=6 format=2]

[ext_resource path="res://Zombie.gd" type="Script" id=1]
[ext_resource path="res://assets/img/play/zombies/zombie.png" type="Texture" id=2]
[ext_resource path="res://assets/img/play/zombies/zombies_num.png" type="Texture" id=3]
[ext_resource path="res://Font48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/img/play/zombies/bullseye.png" type="Texture" id=5]

[node name="Zombie" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 2 )

[node name="ZombiesNum" type="TextureRect" parent="."]
visible = false
margin_left = 82.0
margin_top = 85.0
margin_right = 130.0
margin_bottom = 133.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ZombiesNum"]
margin_left = 2.0
margin_right = 46.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
valign = 1

[node name="BullsEye" type="TextureRect" parent="."]
visible = false
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 5 )
[connection signal="gui_input" from="BullsEye" to="." method="_on_BullsEye_gui_input"]
